# scanreport

./: LICENSE  README.md  TODO.md  config.json  pyproject.toml
docs/: architecture-refactor-plan.md
tests/: test_config_cli.py  test_ingestion.py
xnat_audit/: __init__.py  __main__.py  utils.py
xnat_audit/cli/: __init__.py  main.py
xnat_audit/config/: __init__.py  config.py
xnat_audit/ingestion/: __init__.py  client.py  dicom_times.py  queries.py  refresh.py
xnat_audit/models/: __init__.py  enums.py  profile.py  scan.py  session.py
xnat_audit/normalization/: __init__.py  naming.py  normalize.py
xnat_audit/reconciliation/: __init__.py  anomalies.py  engine.py  rules.py
xnat_audit/reporting/: __init__.py  calendar.py  html.py  report.py
xnat_audit/reporting/static/: report.css
xnat_audit/reporting/templates/: weekly_report.html
xnat_audit/scheduling/: __init__.py  base.py  epic.py
xnat_audit/storage/: __init__.py  snapshots.py  sqlite_store.py
